# rust-kafka_eos

./: .gitignore  Makefile  README.md
docker/: docker-compose.yml
rust-kafka/: .env  Cargo.toml
rust-kafka/src/: main.rs
rust-kafka/src/kafka/: config.rs  mod.rs
rust-kafka/src/kafka/consumer/: avro.rs  eos.rs  mod.rs
rust-kafka/src/kafka/producer/: avro.rs  mod.rs  transactional.rs
rust-kafka/src/kafka/schema/: avro.rs  event.rs  mod.rs  registry.rs  sensor_event.avsc
