[package]
name = "rust-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]

# ==================================================
# 🌀 Async Runtime
# ==================================================
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# ==================================================
# 🦀 Kafka Client — rust-rdkafka
# ==================================================
rdkafka = { version = "0.36", features = ["cmake-build"] }

# ==================================================
# 🧱 Infrastructure libraries
# ==================================================
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

# ==================================================
# 🔧 Utilities
# ==================================================
rand = "0.8"
chrono = "0.4"
dotenvy = "0.15"
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }

# ==================================================
# 🧩 Avro + Schema Registry
# ==================================================
apache-avro = "0.16"
reqwest = { version = "0.12", features = ["json", "blocking"] }

